Information alignment corrected

--- a/project0.css
+++ b/project0.css
@@ -29,6 +29,11 @@
    margin-bottom: 75px;
 }
 
+#emptydd {
+   margin-top: 75px;
+   margin-bottom: 75px;
+}
+
 h2 {
    font-size: 19px;
 }
@@ -46,9 +51,15 @@ h2 {
    font-size: 19px;
    text-align: right;
    padding-right: 10px;
+   float: left;
 }
 
 .details1 {
    font-weight: bold;
    font-size: 15px;
+}
+
+#details {
+   margin: 100px;
+   padding-left: 20px;
 }
